--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,3 +39,12 @@ jobs:
       testResultsFiles: '**/test-results.xml'
       testRunTitle: 'Python $(python.version)'
     condition: succeededOrFailed()
+
+  - task: CopyFiles@2
+    inputs:
+      contents: results.txt
+      targetFolder: $(Build.ArtifactStagingDirectory)
+  - task: PublishBuildArtifacts@1
+    inputs:
+      pathtoPublish: $(Build.ArtifactStagingDirectory)
+      artifactName: MyResults
